--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="settings">Settings</string>
     <string name="customers">Customers</string>
+    <string name="items">Items</string>
     <string name="add_customer">Add customer</string>
 </resources>
