--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="settings">Settings</string>
     <string name="customers">Customers</string>
     <string name="items">Items</string>
-    <string name="add_customer">Add customer</string>
+    <string name="add_customer">Add Customer</string>
+    <string name="add_item">Add Item</string>
 </resources>
