--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="add_item">Add Item</string>
     <string name="setup_warning">*You cannot change it later.</string>
     <string name="not_Found">*User not found!</string>
+    <string name="amount_received">Amount Received</string>
 </resources>
