--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="customers">Customers</string>
     <string name="items">Items</string>
     <string name="add_customer">Add Customer</string>
+    <string name="print_bill">Print Bill</string>
     <string name="add_item">Add Item</string>
     <string name="setup_warning">*You cannot change it later.</string>
     <string name="not_Found">*User not found!</string>
