--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="setup_warning">*You cannot change it later.</string>
     <string name="not_Found">*User not found!</string>
     <string name="amount_received">Amount Received</string>
+    <string name="printer_settings">Printer Setup</string>
 </resources>
