--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="not_Found">*User not found!</string>
     <string name="amount_received">Amount Received</string>
     <string name="printer_settings">Printer Setup</string>
+    <string name="bills">Bills</string>
+    <string name="bill_not_found">Bill Not Found</string>
 </resources>
