--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="add_customer">Add Customer</string>
     <string name="print_bill">Print Bill</string>
     <string name="setup_warning">*You can change it later.</string>
-    <string name="not_Found">*User not found!</string>
+    <string name="not_Found">*Customer not found!</string>
     <string name="amount_received">Amount Received</string>
     <string name="printer_settings">Printer Setup</string>
     <string name="bills">Bills</string>
@@ -39,4 +39,10 @@
     <string name="print_receipt">Print Receipt</string>
     <string name="goto_last_bill">Goto last bill</string>
     <string name="view_pending">View pending</string>
+    <string name="bill_estimation_app">Jewellery Bill Estimation Application</string>
+    <string name="add_now">Add this now!</string>
+    <string name="add_new">Add New</string>
+    <string name="delete">Delete</string>
+    <string name="save">save</string>
+    <string name="delete_message">Are you sure you want to delete this customer? All the data related to this customer will also be deleted and cannot be restored in future</string>
 </resources>
